2018.8/_sources/plugins/available/longitudinal/volatility.txt
volatility: Generate interactive volatility plot
================================================



.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime longitudinal volatility [OPTIONS]

     Generate an interactive control chart depicting the longitudinal
     volatility of sample metadata and/or feature frequencies across time (as
     set using the "state_column" parameter). Any numeric metadata column (and
     metadata-transformable artifacts, e.g., alpha diversity results) can be
     plotted on the y-axis, and are selectable using the "metric_column"
     selector. Metric values are averaged to compare across any categorical
     metadata column using the "group_column" selector. Longitudinal volatility
     for individual subjects sampled over time is co-plotted as "spaghetti"
     plots if the "individual_id_column" parameter is used. state_column will
     typically be a measure of time, but any numeric metadata column can be
     used.

   Options:
     --m-metadata-file MULTIPLE PATH
                                     Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata. Sample
                                     metadata file containing
                                     individual_id_column.  [required]
     --p-state-column TEXT           Metadata column containing state (time)
                                     variable information.  [required]
     --p-individual-id-column TEXT   Metadata column containing IDs for
                                     individual subjects.  [optional]
     --p-default-group-column TEXT   The default metadata column on which to
                                     separate groups for comparison (all
                                     categorical metadata columns will be
                                     available in the visualization).  [optional]
     --p-default-metric TEXT         Numeric metadata or artifact column to test
                                     by default (all numeric metadata columns
                                     will be available in the visualization).
                                     [optional]
     --i-table ARTIFACT PATH FeatureTable[RelativeFrequency]
                                     Feature table containing metrics.
                                     [optional]
     --p-yscale [pow|log|linear|sqrt]
                                     y-axis scaling strategy to apply.  [default:
                                     linear]
     --o-visualization VISUALIZATION PATH
                                     [required if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.longitudinal.visualizers import volatility

.. raw:: html

       <h4>Docstring:</h4>
         <pre>Generate interactive volatility plot

   Generate an interactive control chart depicting the longitudinal volatility
   of sample metadata and/or feature frequencies across time (as set using the
   "state_column" parameter). Any numeric metadata column (and metadata-
   transformable artifacts, e.g., alpha diversity results) can be plotted on
   the y-axis, and are selectable using the "metric_column" selector. Metric
   values are averaged to compare across any categorical metadata column using
   the "group_column" selector. Longitudinal volatility for individual
   subjects sampled over time is co-plotted as "spaghetti" plots if the
   "individual_id_column" parameter is used. state_column will typically be a
   measure of time, but any numeric metadata column can be used.

   Parameters
   ----------
   metadata : Metadata
       Sample metadata file containing individual_id_column.
   state_column : Str
       Metadata column containing state (time) variable information.
   individual_id_column : Str, optional
       Metadata column containing IDs for individual subjects.
   default_group_column : Str, optional
       The default metadata column on which to separate groups for comparison
       (all categorical metadata columns will be available in the
       visualization).
   default_metric : Str, optional
       Numeric metadata or artifact column to test by default (all numeric
       metadata columns will be available in the visualization).
   table : FeatureTable[RelativeFrequency], optional
       Feature table containing metrics.
   yscale : Str % Choices({'linear', 'log', 'pow', 'sqrt'}), optional
       y-axis scaling strategy to apply.

   Returns
   -------
   visualization : Visualization</pre>
       </div>
     </div>
   </div>